@@ -1,3 +1,9 @@
+2008-11-28  Frederic Peters  <fpeters@0d.be>
+
+	* jhbuild/config.py: add system pkgconfig lookup-directories by
+	default. It is possible to avoid this by setting PKG_CONFIG_PATH
+	to the empty string.
+
 2008-11-27  Iago Toral Quiroga <itoral@igalia.com>
 
 	* jhbuild/buildbot/status/web/__init__.py:
